--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
     <!-- brands section start  -->
     <section class="brands-bg">
         <section class="container py-2">
-            <div class="brands-parent py-5 d-flex">
+            <div class="brands-parent py-5">
                 <div class="brands-child">
                     <img src="assets/img/logo1.png" alt="" class="img-fluid">
                 </div>
