--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- nav start -->
     <section class="section-items">
-        <nav class="navbar navbar-expand-lg fixed-top nav-fixed" id="site-header">
+        <nav class="navbar navbar-expand-lg fixed-top" id="site-header">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <i class="fa-brands fa-asymmetrik"></i> UI Portfolio
