--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                     <a class="nav-link active" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="#about">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="services.html">Services</a>
+                    <a class="nav-link" href="#services">Services</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle show" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -51,7 +51,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="#contact">Contact</a>
                   </li>
                   <!-- right side btn start -->
                     <div class="header-btn mx-2">
@@ -89,7 +89,7 @@
     <!-- header end  -->
     </section>
     <!-- Biography section start -->
-    <section class="py-5">
+    <section class="py-5" id="about">
         <section class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5 pe-lg-5">
@@ -119,14 +119,14 @@
                     </div>
                     <div class="social-info py-3 text-center text-lg-start">
                         <span class="me-4">Follow me on</span>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-                        <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/nahid0984/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://twitter.com/nahid1083" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100009237405142" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://github.com/nahid4662" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                     <div class="biography-btn text-center text-lg-start">
                         <a href="" class="btn btn-primary btn-style rounded-pill mt-4 me-sm-2">Hire Me</a>
-                        <a href="" class="btn btn-primary1 btn-style rounded-pill mt-4">Download CV</a>
+                        <a href="https://drive.google.com/file/d/12rcEAtKin8RE7h_SeClhCIJsQROrlgsL/view?usp=drive_link" target="_blank" class="btn btn-primary1 btn-style rounded-pill mt-4">Download CV</a>
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@
     <!-- Biography section end -->
     <!-- services section start -->
     <section class="services-area py-5">
-        <section class="container">
+        <section class="container" id="services">
             <div class="row">
                 <div class="col-lg-6 offset-lg-3">
                     <div class="services-title text-center py-5">
@@ -304,25 +304,41 @@
             <div class="row text-center">
                 <div class="col-lg-3 col-6">
                     <div class="stats-items pb-4 pb-lg-0">
-                        <h2>1500</h2>
+                        <div id="counters_1">
+                            <div class="counter" 
+                                 data-TargetNum="575">
+                            </div>
+                        </div>
                         <p>Finished Projects</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6">
                     <div class="stats-items pb-4 pb-lg-0">
-                        <h2>2500</h2>
+                        <div id="counters_2">
+                            <div class="counter" 
+                                 data-TargetNum="1275">
+                            </div>
+                        </div>
                         <p>Working Hours</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6">
                     <div class="stats-items">
-                        <h2>1280</h2>
+                        <div id="counters_3">
+                            <div class="counter" 
+                                 data-TargetNum="1500">
+                            </div>
+                        </div>
                         <p>Online Support</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6">
                     <div class="stats-items">
-                        <h2>3020</h2>
+                        <div id="counters_3">
+                            <div class="counter" 
+                                 data-TargetNum="1785">
+                            </div>
+                        </div>
                         <p>Happy Customers</p>
                     </div>
                 </div>
@@ -414,7 +430,7 @@
     <!-- brands section start  -->
     <section class="brands-bg">
         <section class="container py-2">
-            <div class="brands-parent py-5">
+            <div class="brands-parent py-5 d-flex">
                 <div class="brands-child">
                     <img src="assets/img/logo1.png" alt="" class="img-fluid">
                 </div>
@@ -446,9 +462,9 @@
                     </div>
                 </div>
                 <div class="col-lg-10 offset-lg-1 pb-5 col-md-12">
-                    <div class="footer-items text-center py-3">
+                    <div class="footer-items text-center py-3" id="contact">
                         <a href="" class="text-decoration-none my-address"><i class="fa-solid fa-phone-flip me-1"></i> +8801790641340</a>
-                        <a href="" class="text-decoration-none my-address d-block d-sm-inline-block my-3 my-sm-0"><i class="fa-solid fa-envelope me-1"></i> nahid1083@gmail.com</a>
+                        <a href="mailto: nahid1083@gmail.com" class="text-decoration-none my-address d-block d-sm-inline-block my-3 my-sm-0"><i class="fa-solid fa-envelope me-1"></i> nahid1083@gmail.com</a>
                         <span class="d-block d-md-inline-block my-3 my-md-0"><i class="fa-solid fa-location-dot me-1"></i> Farmgate, Dhaka-1214, Bangladesh.</span>
                     </div>
                 </div>
@@ -464,11 +480,11 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="py-lg-4 my-sm-5 my-3 my-lg-0 py-0 text-lg-end text-center socials">
-                            <a href="" class="social-icon"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
-                            <a href="" class="social-icon"><i class="fa-brands fa-x-twitter"></i></a>
-                            <a href="" class="social-icon"><i class="fa-brands fa-github-alt"></i></a>
-                            <a href="" class="social-icon"><i class="fa-brands fa-whatsapp"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100009237405142" target="_blank" class="social-icon"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/nahid0984/" target="_blank" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="https://twitter.com/nahid1083" target="_blank" class="social-icon"><i class="fa-brands fa-x-twitter"></i></a>
+                            <a href="https://github.com/nahid4662" target="_blank" class="social-icon"><i class="fa-brands fa-github-alt"></i></a>
+                            <a href="https://wa.link/nftt10" target="_blank" class="social-icon"><i class="fa-brands fa-whatsapp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -485,6 +501,8 @@
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <!-- Type js  -->
     <script async src="https://unpkg.com/typer-dot-js@0.1.0/typer.js"></script>
+    <!-- counter -->
+    <script src="https://www.jqueryscript.net/demo/animated-counter-when-visible/multi-animated-counter.js"></script>
     <!-- script  -->
     <script src="assets/js/script.js"></script>
 </body>
