--- a/index.html
+++ b/index.html
@@ -79,8 +79,11 @@
                         </div>
                     </div>
                     <div class="col-lg-4 pt-lg-3">
-                        <div class="header-banner pt-lg-5">
+                        <div class="header-banner pt-lg-5 d-none d-lg-block">
                             <img src="assets/img/banner-2.png" alt="" title="" class="img-fluid">
+                        </div>
+                        <div class="d-lg-none pt-5">
+                            <img src="assets/img/banner-for-sm.png" alt="" class="img-fluid">
                         </div>
                     </div>
                 </div>
