--- a/index.html
+++ b/index.html
@@ -491,6 +491,9 @@
                         </div>
                     </div>
                 </div>
+                 <!-- back to top start  -->  
+                <span><i class="fa-solid fa-arrow-turn-up" id="backToTopBtn"></i></span>
+                 <!-- back to top end  -->
             </section>
         </section>
     </footer>
